--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,15 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-   <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-<div class="elfsight-app-c8746b14-8e73-4124-b77e-b324e0790fb9"></div>
+   <!-- <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-c8746b14-8e73-4124-b77e-b324e0790fb9"></div> -->
+<script async src='https://d2mpatx37cqexb.cloudfront.net/delightchat-whatsapp-widget/embeds/embed.min.js'></script>
+        <script>
+          var wa_btnSetting = {"btnColor":"#16BE45","ctaText":"WhatsApp Us","cornerRadius":40,"marginBottom":20,"marginLeft":20,"marginRight":20,"btnPosition":"right","whatsAppNumber":"16477650265","welcomeMessage":"Hello","zIndex":999999,"btnColorScheme":"light"};
+          window.onload = () => {
+            _waEmbed(wa_btnSetting);
+          };
+        </script>
+      
   </body>
 </html>
